[package]
name = "supermon"
version = "0.1.0"
authors = ["Simon Bernier St-Pierre <sbernierstpierre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4"
nix = "0.15"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
signal-hook = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
